fix zoom issues on ios

--- a/conreq/static-dev/css/main_slim.css
+++ b/conreq/static-dev/css/main_slim.css
@@ -8,6 +8,12 @@
 	--logo-drop-shadow: drop-shadow(3px 3px 5px #2222224f);
 }
 
+@media only screen and (max-width: 800px) {
+	:root {
+		--primary-font-size: 16px;
+	}
+}
+
 html,
 body,
 .main,
