--- a/conreq/static-dev/css/server_settings.css
+++ b/conreq/static-dev/css/server_settings.css
@@ -42,7 +42,7 @@
 	height: 100%;
 	padding-left: 15px;
 	padding-right: 15px;
-	font-size: var(--primary-font-size);
+	font-size: 16px;
 }
 
 .settings-item.text-display-only .settings-item-text {
